--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+
     <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 992px) ">
     <link rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 992px) ">
     <script src="https://kit.fontawesome.com/de8467608f.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Olawale-Bamidele</title>
 </head>
+
 <body>
     <header>
         <a class="d-none" href="#">Olawale</a>
@@ -24,168 +28,119 @@
             <li class="nav-item"><a class="nav-link" href="index.html"><img src="img/message.png" alt=""></a></li>
         </ul>
     </header>
-    
+
     <section class="container">
         <div class="row justify-content-center text-center">
             <h1>Hey There. I'm Ola</h1>
-        <h3>I'm a Software Developer</h3>
-        <p>I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, 
-            don’t hestiate to contact me.</p>
+            <h3>I'm a Software Developer</h3>
+            <p>I can help you build a product, feature or website. Look through some of my work and experience! If you
+                like what you see and have a project you need coded,
+                don’t hestiate to contact me.</p>
         </div>
-        <ul class="list-unstyled row justify-content-center" >
-        <li class="col col-1"> <a href="http://https://github.com/olawalecoder"><img class="icons" src="img/github.png" alt=""></a></li>
-        <li class="col col-1"><a href="http://https://www.linkedin.com/in/bamidele-olawale-072975142/"><img class="icons" src="img/Linkedin.png" alt="Linkedin account"></a></li>
-        <li class="col col-1"><a href="http://twitter.com/Olawalecoder"><img class="icons" src="img/twitter.png" alt="twitter account"></a></li>
-        <li class="col col-1"><a href="#"><img class="icons" src="img/angelist.png" alt="angelist account"></a></li>
-        <li class="col col-1"><a href="#"><img class="icons" src="img/medium.png" alt="medium account"></a></li>    
+        <ul class="list-unstyled row justify-content-center">
+            <li class="col col-1"> <a href="http://https://github.com/olawalecoder"><img class="icons"
+                        src="img/github.png" alt=""></a></li>
+            <li class="col col-1"><a href="http://https://www.linkedin.com/in/bamidele-olawale-072975142/"><img
+                        class="icons" src="img/Linkedin.png" alt="Linkedin account"></a></li>
+            <li class="col col-1"><a href="http://twitter.com/Olawalecoder"><img class="icons" src="img/twitter.png"
+                        alt="twitter account"></a></li>
+            <li class="col col-1"><a href="#"><img class="icons" src="img/angelist.png" alt="angelist account"></a></li>
+            <li class="col col-1"><a href="#"><img class="icons" src="img/medium.png" alt="medium account"></a></li>
         </ul>
     </section>
 
-    <section class="container text-center my-5" >
+    <section class="container text-center my-5">
         <div class="dsktp-works-top">
             <h2 class="py-2">My Recent Works</h2>
             <div class="hline"></div>
         </div>
         <div class="proj1">
             <img class="first-proj-picture" src="img/Placeholder.png" alt="">
-            <div class="dsktp-proj1">
-                <h3 class="py-2">Multi-Post Stories</h3>
-            <p>A daily selection of privately personalized reads; 
-                no accounts or sign-ups required. has been the
-                industry's standard dummy text ever since the 
-                1500s, when an unknown printer took a standard dummy text.
-            </p>
-            <ul class="tools">
-                <li>css</li>
-                <li>html</li>
-                <li>bootstrap</li>
-                <li>Ruby</li>
-            </ul>
-            <button class="Proj-button">See Project</button>
+            <div class="card my-5 w-75 container justify-content-center">
+                <div class="card-body">
+
+                    <h3 class="py-2">Multi-Post Stories</h3>
+                    <p>A daily selection of privately personalized reads;
+                        no accounts or sign-ups required. has been the
+                        industry's standard dummy text ever since the
+                        1500s, when an unknown printer took a standard dummy text.
+                    </p>
+                    <ul class="row list-unstyled justify-content-center tag">
+                        <li class="col-2 m-1 rounded-pill bg-warning">css</li>
+                        <li class="col-2 m-1 rounded-pill bg-warning">html</li>
+                        <li class="col-2 m-1 rounded-pill bg-warning">bootstrap</li>
+                        <li class="col-2 m-1 rounded-pill bg-warning">Ruby</li>
+                    </ul>
+                    <button class="btn btn-primary border-0 rounded-2">See Project</button>
+                </div>
             </div>
         </div>
-        <div class="project-template">
-            <div class="proj2">
-                <h3>Profesional Art Printing Data</h3>
-                <p>A daily selection of privately personalized reads; no
-                    accounts or sign-ups required. has been the industry's 
-                    standard
-                </p>
-                <ul class="tools2">
-                    <li>html</li>
-                    <li>bootstrap</li>
-                    <li>Ruby</li>
-                </ul>
-                <button class="Proj-button2">See Project</button>
+        <div>
+
+            <!-- ///////////////////////// -->
+            <div class="card my-5 w-75 container justify-content-center">
+
+
+                <div class="card-body">
+                    <h3 class="card-title">Profesional Art Printing Data</h3>
+                    <p class="card-text">A daily selection of privately personalized reads; no
+                        accounts or sign-ups required. has been the industry's
+                        standard
+                    </p>
+                    <ul class="row list-unstyled justify-content-center tag">
+                        <li class="col-2 m-1 rounded-pill bg-warning">html</li>
+                        <li class="col-2 m-1 rounded-pill bg-warning">bootstrap</li>
+                        <li class="col-2 m-1 rounded-pill bg-warning">Ruby</li>
+                    </ul>
+                    <button class="btn btn-primary border-0 rounded-2">See Project</button>
+
+                </div>
+                <!-- ///////////////////////// -->
             </div>
-            <div class="proj2">
-                <h3>Data Dashboard Healthcare</h3>
-                <p>A daily selection of privately personalized reads; no
-                    accounts or sign-ups required. has been the industry's 
-                    standard
-                </p>
-                <ul class="tools2">
-                    <li>html</li>
-                    <li>bootstrap</li>
-                    <li>Ruby</li>
-                </ul>
-                <button class="Proj-button2">See Project</button>
-            </div>
-            <div class="proj2">
-                <h3>Profesional Art Printing Data</h3>
-                <p>A daily selection of privately personalized reads; no
-                    accounts or sign-ups required. has been the industry's 
-                    standard
-                </p>
-                <ul class="tools2">
-                    <li>html</li>
-                    <li>bootstrap</li>
-                    <li>Ruby</li>
-                </ul>
-                <button class="Proj-button2">See Project</button>
-            </div>
-            <div class="proj2">
-                <h3>Profesional Art Printing Data</h3>
-                <p>A daily selection of privately personalized reads; no
-                    accounts or sign-ups required. has been the industry's 
-                    standard
-                </p>
-                <ul class="tools2">
-                    <li>html</li>
-                    <li>bootstrap</li>
-                    <li>Ruby</li>
-                </ul>
-                <button class="Proj-button2">See Project</button>
-            </div>
-            <div class="proj2">
-                <h3>Profesional Art Printing Data</h3>
-                <p>A daily selection of privately personalized reads; no
-                    accounts or sign-ups required. has been the industry's 
-                    standard
-                </p>
-                <ul class="tools2">
-                    <li>html</li>
-                    <li>bootstrap</li>
-                    <li>Ruby</li>
-                </ul>
-                <button class="Proj-button2">See Project</button>
-            </div>
-            <div class="proj2">
-                <h3>Profesional Art Printing Data</h3>
-                <p>A daily selection of privately personalized reads; no
-                    accounts or sign-ups required. has been the industry's 
-                    standard
-                </p>
-                <ul class="tools2">
-                    <li>html</li>
-                    <li>bootstrap</li>
-                    <li>Ruby</li>
-                </ul>
-                <button class="Proj-button2">See Project</button>
-            </div>
-        </div>  
+
+        </div>
     </section>
 
-    <section class="about">
+    <section class="about container w-75 text-center">
         <div class="intro2">
             <h1>About me</h1>
-            <p>Hello I’m a software developer! I can help you build a product , feature or website Look through 
-                some of my work and experience! If you like what you see and have a project 
+            <p>Hello I’m a software developer! I can help you build a product , feature or website Look through
+                some of my work and experience! If you like what you see and have a project
                 you need coded, don’t hestiate to contact me.</p>
-             <button class="Proj-button">Get My Resume</button>
+            <button class="btn btn-primary">Get My Resume</button>
         </div>
         <div class="hline"></div>
-            <ul class="main-list">
-                <li class="language">Language
-                    <ul class="sub-items">
-                        <li>Javascript</li>
-                        <li>Ruby</li>
-                        <li>Html</li>
-                        <li>Css</li>
-                    </ul>
-                </li>
-                <li class="frameworks">Frameworks
-                    <ul class="sub-items">
-                        <li>Bootstrap</li>
-                        <li>Ruby on Rails</li>
-                        <li>RSPec</li>
-                        <li>CapyBara</li>
-                        <li>Selenium</li>
-                    </ul>
-                </li>
-                <li class="skills">Skills
-                    <ul class="sub-items">
-                        <li>Codekit</li>
-                        <li>Github</li>
-                        <li>Codepen</li>
-                        <li>Gitlab</li>
-                        <li>Terminal</li>
-                    </ul>
-                </li>
-            </ul>
+        <ul class="row list-unstyled">
+            <li class="language col">Language
+                <ul class=" list-unstyled">
+                    <li >Javascript</li>
+                    <li >Ruby</li>
+                    <li >Html</li>
+                    <li >Css</li>
+                </ul>
+            </li>
+            <li class="frameworks col">Frameworks
+                <ul class="list-unstyled col">
+                    <li class="">bootstrap</li>
+                    <li>Ruby on Rails</li>
+                    <li>RSPec</li>
+                    <li>CapyBara</li>
+                    <li>Selenium</li>
+                </ul>
+            </li>
+            <li class="skills col ">Skills
+                <ul class="list-unstyled col">
+                    <li>Codekit</li>
+                    <li>Github</li>
+                    <li>Codepen</li>
+                    <li>Gitlab</li>
+                    <li>Terminal</li>
+                </ul>
+            </li>
+        </ul>
     </section>
     <section class="form">
-        <p>I'm always interested in hearing about new projects, so if 
+        <p>I'm always interested in hearing about new projects, so if
             you'd like to chat please get in touch.</p>
         <form action="https://formspree.io/f/xlezrpvz" method="post" class="contact-form">
             <ul>
@@ -196,7 +151,8 @@
                     <input type="email" name="user_email" class="mail" placeholder="Email address" required>
                 </li>
                 <li>
-                    <textarea name="user_message" class="msg" cols="23" rows="4" required maxlength="500" placeholder="Enter text here"></textarea>
+                    <textarea name="user_message" class="msg" cols="23" rows="4" required maxlength="500"
+                        placeholder="Enter text here"></textarea>
                 </li>
                 <li>
                     <button type="submit" class="form-button">Get in touch</button>
@@ -204,15 +160,19 @@
             </ul>
         </form>
     </section>
-    
+
     <footer>
         <ul class="social-media">
-            <li> <a href="http://https://github.com/olawalecoder"><img class="icons" src="img/github.png" alt=""></a></li>
-            <li><a href="http://https://www.linkedin.com/in/bamidele-olawale-072975142/"><img class="icons" src="img/Linkedin.png" alt="Linkedin account"></a></li>
-            <li><a href="http://twitter.com/Olawalecoder"><img class="icons" src="img/twitter.png" alt="twitter account"></a></li>
+            <li> <a href="http://https://github.com/olawalecoder"><img class="icons" src="img/github.png" alt=""></a>
+            </li>
+            <li><a href="http://https://www.linkedin.com/in/bamidele-olawale-072975142/"><img class="icons"
+                        src="img/Linkedin.png" alt="Linkedin account"></a></li>
+            <li><a href="http://twitter.com/Olawalecoder"><img class="icons" src="img/twitter.png"
+                        alt="twitter account"></a></li>
             <li><a href="#"><img class="icons" src="img/angelist.png" alt="angelist account"></a></li>
-            <li><a href="#"><img class="icons" src="img/medium.png" alt="medium account"></a></li>    
-            </ul>
+            <li><a href="#"><img class="icons" src="img/medium.png" alt="medium account"></a></li>
+        </ul>
     </footer>
 </body>
+
 </html>
